--- a/ProyectoLacasona/AppLacasona/templates/AppLacasona/agregarimg.html
+++ b/ProyectoLacasona/AppLacasona/templates/AppLacasona/agregarimg.html
@@ -18,7 +18,7 @@ La Casona Estudio
         {{form.as_p}}
 
 
-    <input type="submit", value="Subir Imagen", style="color: chocolate;" >
+    <input type="submit", value="Seleccionar Avatar", style="color: chocolate;" >
 
 </form>
 {% endblock %}
