--- a/ProyectoLacasona/AppLacasona/templates/AppLacasona/padre.html
+++ b/ProyectoLacasona/AppLacasona/templates/AppLacasona/padre.html
@@ -37,8 +37,9 @@
                         <li class="nav-item"><a id="btn2" class="nav-link" href="{% url 'FormSendSong' %}">Envianos tu canción</a></li>
                         <li class="nav-item"><a id="btn3" class="nav-link" href="{% url 'FormAskAnything' %}">Hablá con nosotros</a></li>
                         <li class="nav-item"><a id="btn7" class="nav-link" href="{% url 'FormPostpic' %}">Publicá tu Foto</a></li>
+                        <li class="nav-item"><a id="btn8" class="nav-link" href="{% url 'view_postpic' %}">Ustedes</a></li>
                         <li class="nav-item"><a id="btn6" class="nav-link" href="{% url 'Logout' %}">Logout</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'AboutMe' %}">About Me</a></li>
+                        <!--<li class="nav-item"><a class="nav-link" href="{% url 'AboutMe' %}">About Me</a></li> -->
 
                         <p style="color: aliceblue;"> {{user.first_name}} {{user.last_name}}</p>
 
