--- a/ProyectoLacasona/AppLacasona/templates/AppLacasona/view_postpic.html
+++ b/ProyectoLacasona/AppLacasona/templates/AppLacasona/view_postpic.html
@@ -1,7 +1,7 @@
 {% extends "AppLacasona/padre.html" %}
 
 {% block titulo %}
-
+Gracias por elegirnos!
 {% endblock %}
 
 {% block titulotexto %}
@@ -10,6 +10,12 @@ Ustedes
 
 {% block cuerpotexto %}
 
-
-
+<div class="imagenes-container">
+    {% for imagen in imagenes %}
+        <div class="imagen-item">
+            <img src="{{ imagen.imagen.url }}" alt="Imagen publicada" class="imagen-publicada">
+            <p class="descripcion-imagen">{{ imagen.descripcion }}</p>
+        </div>
+</div>
+    {% endfor %}
 {% endblock %}
