--- a/ProyectoLacasona/AppLacasona/templates/AppLacasona/form_postpic.html
+++ b/ProyectoLacasona/AppLacasona/templates/AppLacasona/form_postpic.html
@@ -11,7 +11,13 @@ Compartinos tu experiencia en La Casona con una foto!
 
 {% block cuerpotexto %}
 
-<form method="post" enctype="multipart/form-data" action="/AppLacasona/templates/AppLacasona/form_postpic.html">
+<!-- <form method="post" enctype="multipart/form-data" action="/AppLacasona/templates/AppLacasona/form_postpic.html">
+    {% csrf_token %}
+    {{ formulario.as_p }}
+    <button type="submit">Publicar</button>
+</form> -->
+
+<form method="post" enctype="multipart/form-data" action="{% url 'FormPostpic' %}">
     {% csrf_token %}
     {{ formulario.as_p }}
     <button type="submit">Publicar</button>
